# ComplexDaCe

./: CMakeLists.txt  README.md  batched_dft.py  main.cpp  makescript  ploter.m  run.sh
analysis_and_plotting/: plot.m
run_folder/: slurm_run.sh
src/: batched_dft.py  batched_dft_ofp.py  complex_reduce_fix.h  not_batched_dft.py  sdfg_optimization.py  ugly_print_code.py
